--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -15,12 +15,165 @@
         android:layout_below="@+id/title"
         android:background="@color/color_gray_five"
         >
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_project"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            />
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/bg_scenecommunity"
+                    android:gravity="center_vertical"
+                    >
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="38dp"
+                        >
+                        <TextView
+                            android:id="@+id/txt_project_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            tools:text="浦东星河湾"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            />
+                        <TextView
+                            android:id="@+id/txt_project_type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/txt_project_name"
+                            android:layout_centerVertical="true"
+                            android:gravity="center"
+                            android:layout_marginStart="6dp"
+                            android:paddingStart="8dp"
+                            android:paddingEnd="8dp"
+                            tools:text="社区宝库"
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
+                            android:background="@color/color_red"
+                            />
+                        <View style="@style/view_line"
+                            android:layout_width="wrap_content"
+                            android:layout_alignEnd="@+id/txt_project_type"
+                            android:layout_alignParentBottom="true"
+                            />
+                    </RelativeLayout>
+                    <TextView
+                        android:id="@+id/txt_project_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="38dp"
+                        android:layout_marginTop="4dp"
+                        android:drawableStart="@drawable/loc"
+                        android:drawablePadding="10dp"
+                        android:gravity="center"
+                        tools:text="上海市浦东新区锦绣路"
+                        android:textColor="@color/color_gray_three"
+                        android:textSize="12sp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        />
+                    <TextView
+                        android:id="@+id/txt_project_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="38dp"
+                        android:layout_marginTop="4dp"
+                        android:drawableStart="@drawable/icon_phone_scene"
+                        android:drawablePadding="10dp"
+                        android:gravity="center"
+                        tools:text="201-60869874"
+                        android:textColor="@color/color_gray_three"
+                        android:textSize="12sp"
+                        />
+                </LinearLayout>
+                <View style="@style/view_line" android:layout_height="10dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:orientation="vertical"
+                    android:background="@color/white"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="18dp"
+                        android:padding="5dp"
+                        android:drawableStart="@drawable/icon_intro"
+                        android:drawablePadding="10dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/desc"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_gray_two"
+                        />
+                    <View style="@style/view_line" android:layout_marginBottom="1dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@color/white"
+                    >
+                    <TextView
+                        android:id="@+id/txt_project_desc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="38dp"
+                        android:layout_marginEnd="38dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="12dp"
+                        android:minHeight="40dp"
+                        tools:text="宝库中国旗下的上海观复博物馆和宝库艺术中作为上海中心大厦的文化内核驱动力，在 这幢上海高楼群的收官之作中，以创新、融合的思想，将“文化”作为内核注入“建筑”这 一载体中，致力于将上海中心大厦从建筑上的物理高度升华为文化艺术的精神制高点。随着 大厦的建成开业上海中心将会重新定义未来的城市 CBD，成为中西方文化金融交融互动、推 动全球文化金融影响力的城市创新发展新中心、新引擎。"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_gray_two"
+                        />
+                </LinearLayout>
+                <View style="@style/view_line" android:layout_height="10dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:orientation="vertical"
+                    android:background="@color/white"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="18dp"
+                        android:padding="5dp"
+                        android:drawableStart="@drawable/icon_locimg"
+                        android:drawablePadding="10dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/project_pic"
+                        android:textSize="14sp"
+                        android:textColor="@color/color_gray_two"
+                        />
+                    <View style="@style/view_line" android:layout_marginBottom="1dp"/>
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_pic_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    />
+                <View style="@style/view_line" android:layout_height="10dp"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_service_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    />
+            </LinearLayout>
+        </ScrollView>
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/project_bottom"
