--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v4.view.ViewPager
+    <com.myf.baokuqzz.widget.NoScrollViewPager
         android:id="@+id/mapViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
