--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -10,15 +10,15 @@
         android:id="@+id/img_themeBack"
         android:layout_width="40dp"
         android:layout_height="44dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="14dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="14dp"
         android:scaleType="fitXY"
         android:src="@drawable/arr_left"
-        />
+        tools:ignore="ContentDescription" />
     <TextView
         android:id="@+id/tv_themeTitle"
         android:layout_width="wrap_content"
@@ -33,15 +33,53 @@
         android:visibility="visible"
         tools:text="社区宝库"
         />
+    <RadioGroup
+        android:id="@+id/title_radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:maxWidth="260dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="gone"
+        >
+        <RadioButton
+            android:id="@+id/btn_radio_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:background="@drawable/radio_bg_leftwhite"
+            android:button="@null"
+            android:text="@string/radio_list"
+            android:textColor="@color/color_red"
+            />
+        <RadioButton
+            android:id="@+id/btn_radio_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:background="@drawable/radio_bg_rightred"
+            android:button="@null"
+            android:text="@string/radio_map"
+            android:textColor="@color/white"
+            />
+    </RadioGroup>
     <ImageView
         android:id="@+id/img_right"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:scaleType="fitXY"
         android:src="@drawable/icon_msg"
         android:visibility="gone"
-        />
+        tools:ignore="ContentDescription" />
 </RelativeLayout>
